Fix + prova bottone align

--- a/div/style.css
+++ b/div/style.css
@@ -17,6 +17,12 @@
     transition: transform 2s ease;
 }
 
+.title{
+    background-color: burlywood;
+    border: solid 5px brown;
+    margin-right: 900px;
+}
+
 img{
     width: 100%; /*adatto img al div*/
     height: 100%;
@@ -38,7 +44,7 @@ body{
 
 h1{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    position: fixed;
+    position: sticky;
     bottom: 10px;
     color:brown;
 }
@@ -50,10 +56,37 @@ h2{
     color:brown;
 }
 
+#bottomText{
+    position: fixed;
+    bottom: 10px;
+    background-color: burlywood;
+    border: solid 4px brown;
+    margin-right: 900px;
+}
+
+.button{
+    background-color: burlywood;
+    color: brown;
+    border: solid 1px brown;
+    border-radius: 10px;
+}
+
 #updPh
 {
     position: fixed;
     left: 50%;
-    bottom: 10px;
+    bottom: 10px;  
 }
 
+#updPh:hover {
+    -webkit-transform: scale(1.1,1.1);
+  }
+
+#alignButton{
+    position:absolute;
+    top:10px;
+    left: 10px;
+}
+#align:hover {
+    -webkit-transform: scale(1.1,1.1);
+  }
